fix: css aligned pages width

--- a/src/templates/article/article.css
+++ b/src/templates/article/article.css
@@ -32,8 +32,12 @@
 }
 
 @screen md {
-  .post .cont-inner, .page .cont-inner {
+  .post .cont-inner {
     @apply px-32;
+  }
+
+  .page .cont-inner {
+    @apply px-12;
   }
 
   .post .share {
@@ -46,9 +50,13 @@
     @apply py-32;
   }
   
-  .post .cont-inner, .page .cont-inner {
+  .post .cont-inner {
     @apply px-32;
   }
+
+  .page .cont-inner {
+    
+  }  
 
   .post figure, .post div.code, .page figure, .page div.code {
     margin: 2rem -3rem;
